--- a/styles/app.css
+++ b/styles/app.css
@@ -1,5 +1,5 @@
 /*reset*/
-html, body, nav, p, div, span, h1, ul, li, a {
+html, body, nav, p, div, span, code, h1, h2, a, button {
   margin: 0;
   border: 0;
   padding: 0;
@@ -20,17 +20,16 @@ html, body, nav, p, div, span, h1, ul, li, a {
 
 #root > div {
   min-width: 34vw;
-  max-width: 500px;
+  max-width: 600px;
   margin: auto;
-  padding: 3vh 3vw 12vh 3vw;
-}
-
-#root > div > a {
-  font-size: 14px;
+  padding: 2vh 3vw 12vh 3vw;
 }
 
 html {
   background-color: rgb(0, 120, 0);
+  -webkit-text-size-adjust: none;
+  -moz-text-size-adjust: none;
+  -ms-text-size-adjust: none;
 }
 
 body {
@@ -39,59 +38,65 @@ body {
   font-size: 16px;
 }
 
-h1 {
-  font-size: 22px;
-  margin-bottom: 0.5vh;
-}
-
-nav {
-  margin: 3vh 0;
-}
-
 p {
+  margin: 4vh 0 3vh 0;
+}
+
+h1 {
+  font-size: 24px;
+}
+
+h1 code {
+  font-size: 20px;
+}
+
+#repo-link {
+  font-size: 14px;
+  margin-bottom: 2vh;
+}
+
+/*tests styling*/
+.test {
   margin: 3vh 0;
 }
 
-#root > div > div > div {
-  margin: 1vh 0;
+h2 {
+  font-size: 20px;
 }
 
-#root > div > div > div > div {
-  margin: 3vh 0;
+.test-description {
+  margin: 0 0 1vh 0;
+}
+
+.anchor-tag {
+ margin: 1vh 0;
+}
+
+.button-tag {
+  margin: 2vh 0;
 }
 
 a {
-  border-bottom: 1px dotted rgb(0, 168, 0);
-  touch-action: none;
-  -ms-touch-action: none;
+  border-bottom: 1px dotted;
 }
 
-a:hover, a:active {
-  color: rgb(0, 144, 0);
-  border-bottom: 1px dotted #B0B0B0;
-}
-
-@media all and (hover: none) {
-  a:hover {
-    color: inherit;
-    border-bottom: 1px dotted rgb(0, 168, 0);
-  }
-}
-
-li {
-  list-style: none;
-  padding-left: 18px;
-  text-indent: -15px;
-  margin: 0.5vh 0;
-}
-
-li:before {
-  content: "\2013";
-  padding-right: 7px;
+button {
+  padding: 4px;
+  border: 1px solid;
+  border-radius: 5px;
 }
 
 code {
   font-family: monospace;
   font-size: 15px;
   padding-left: 2px;
+}
+
+/*test 1*/
+.test-1:hover {
+  color: green;
+}
+
+.test-1:active {
+  color: red;
 }
