--- a/styles/app.css
+++ b/styles/app.css
@@ -33,7 +33,7 @@ html {
 }
 
 body {
-  font-family: helvetica neue, helvetica, sans-serif;;
+  font-family: helvetica neue, helvetica, sans-serif;
   font-weight: 300;
   font-size: 16px;
 }
